2010-10-23 Homer Xing <homer.xing@gmail.com>

    * Add Fedora repository template
    * Put section name in a separate text entry

2010-10-15 Homer Xing <homer.xing@gmail.com>

    * Append custom repository. Remove chosen repository.

2010-10-10 Homer Xing <homer.xing@gmail.com>

    * Support multiple snapshots in one day

2010-10-09 Homer Xing <homer.xing@gmail.com>

    * Support Fedora repositories editing

2010-10-08 Homer Xing <homer.xing@gmail.com>

	* If user reply "yes" to "no warranty" dialog, do not display that dialog any more.
	* No error message from info pane
	* Hide motherboard vendor if it is empty
	* Clean Nautilus thumbnail image cache in setting pane
	* Use custom window titlebar layout in setting pane
	* Directly display login icon path & "start-here" icon path

2010-10-03 Homer Xing <homer.xing@gmail.com>

    * Fix issue 1026. If source config is wrong, then exit program. Otherwise, "if not package_name in cls.apt_cache" raises exception.
    * Fix issue 1027. No message dialog after icons pack completely downloaded.
    * Fix issue 1089. Dict <-> String have wrong conversation.

2010-09-23 Homer Xing <homer.xing@gmail.com>

    * Fix bug 635716 - window_manager_name: AttributeError: 'str' object has no attribute 'property_get'
    * Fix bug 632969 - AssertionError: line.endswith('\n') @ FedoraReposSection
	* Fix broken url for:
		Bioclipse, PBC, RouteConverter
	* Use new version:
		Electric, Nscript, Pydev, Geogebra, SweetHome

2010-07-28 Homer Xing <homer.xing@gmail.com>

    * Fix bug about SweetHome3D installing path, issue 1020.
    * Fix bug about RemasterSys installing, issue 1023.
    * Fix bug about a lot of third party repositories, issue 1022.
    * Fix issue about gnomekeyring.cancellederror, issue 999.
    * Fix bug about creating imagemagick icon, issue 1025.

2010-07-27 CHEN Yangyang <skabyy@gmail.com>

    * Optimize the repository configure pane
    * Add "add third party repository area" to repository configure pane