@@ -2,6 +2,7 @@
 
     * Add Fedora repository template
     * Put section name in a separate text entry
+    * New feature: remove unused Linux kernel for Fedora
 
 2010-10-15 Homer Xing <homer.xing@gmail.com>
 
